--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -65,7 +65,30 @@ Klasa \emph{QPaintEngine} udostępnia interfejs za pomocą którego obiekty klas
 \end{figure}
 
 \chapter{Określenie problemu i proponowane rozwiązanie}
-Text in first chapter ...
+
+Przedmiotem pracy jest stworzenie prototypowego serwera hostującego desktopowe aplikacjie oparte o biblioteki Qt oraz KDE. Na żądanie klienta serwer uruchamia wybraną aplikację oraz wstrzykuje kod odpowiedzialny za komunikację klienta z procesem aplikacji i przesyłanie klientowi danych dotyczących wyglądu graficznego interfejsu aplikacji. 
+
+Postawione zadanie w głównej mierze polega na rozwiązaniu trzech podstawowych problemów:
+\begin{enumerate}
+  \item Komunikacja między klientem a serwerem
+  \item Komunikacja między klientem a aplikacją
+  \item Uzyskanie informacji o wygladzie elementów graficznego interfejsu aplikacji
+  \item Symulacja interakcji użytkownika z interfejsem aplikacji
+\end{enumerate}
+
+\section{Komunikacja między klientem a serwerem}
+%Specyfiką problemu jest jego dwuetapowość. W pierwszym etapipe klient inicjuje połączenie jednorazowo wysyłając zapytanie zawierające informacje o aplikacji, którą klient chce uruchomić oraz identyfikatorze klienta. W drugiej kolejności wymagane jest utworzenie kanału komunikacyjnego między klientem a procesem aplikacji. 
+
+Do realizacji tego zadania stworzony został prosty serwer działający w oparciu o protokół HTTP. Jako zasób domyślny udostępnia on listę dostępnych aplikacji, które klient może uruchomić. Lista ta jest w pełni konfigurowalna po stronie serwera. Inicjalizacja połączenia polega na wysłaniu przez klienta nazwy wybranej aplikacji. Serwer po pomyślnej weryfikacji przydziela klientowi unikatowy identyfikator sesji, uruchamia proces aplikacji i wysyła klientowi skrypt w języku JavaScript zajmujący się przetwarzaniem po stronie klienta.
+
+\section{Komunikacja między klientem a aplikacją}
+Do rozwiązania tego problemu konieczne jest utworzenie ciągłego kanału komunikacyjnego między klientem a procesem aplikacji, za pomocą którego będzie możliwe przesyłanie informacji o wyglądzie interfejsu aplikacji oraz informowanie aplikacji o zdarzeniach generowanych przez użytkownika po stronie przeglądarki. Jako, że za cel przyjęte zostało założenie o nieingerowaniu bezpośrednio w kod skompilowanych już aplikacji, postawiono na technikę umożliwiającą dynamiczne załadowanie kodu biblioteki dynamicznej do przestrzeni pamięciowej procesu aplikacji. Kod ten ma za zadanie utrzymanie połączenia oraz transmisję danych między klientem a aplikacją.
+
+\section{Uzyskanie informacji o wygladzie elementów graficznego interfejsu aplikacji}
+Text ...
+
+\section{Symulacja interakcji użytkownika z interfejsem aplikacji}
+Text ...
 
 \chapter{Implementacja}
 Text in first chapter ...
