--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -32,7 +32,7 @@ Głównym wzorcem dla tej pracy jest projekt GTK+ Broadway powstały w 2011 roku
 \chapter{Podstawy teoretyczne}
 W rodziale tym przedstawione zostaną najważniejsze informacje dotyczące technologii wykorzystanych w projekcie. 
 
-\section{Szczegóły niektórych rozwiązań HTML5}
+\section{Wybrane rozwiązania HTML5}
 Text in section ...
 
 \section{Opis biblioteki Qt}
@@ -46,9 +46,12 @@ Kiedy system operacyjny generuje sygnał o zajściu pewnego zdarzenia, \emph{Qt}
 Niektóre zdarzenia, takie jak na przykład \emph{QMouseEvent} czy \emph{QKeyEvent} pochodzą bezpośrednio od systemu operacyjnego. Inne, jak na przykład \emph{QTimerEvent} czy \emph{QPaintEvent} pochodzą z innych źródeł, nierzadko z wnętrza samej aplikacji (np. do komunikacji między wątkami). Warto w tym miejscu zaznaczyć, że rysowanie w \emph{Qt} nie jest operacją wywoływaną przez system operacyjny lecz przez samą aplikację oraz rysowanie z wnętrza obsługi zdarzenia \emph{QPaintEvent} jest jedynym sposobem na renderowanie graficznego interfejsu aplikacji. Pociąga to za sobą pewne problemy opisane w dalszej części pracy.
 
 \subsection{System widgetów}
+Widget'em w bibliotece \emph{Qt} nazywamy obiekt reprezentujący elementy graficznego interfejsu użytkownika takie jak przyciski, listy rozwijane, menu, okna i inne. Klasa \emph{QWidget}\footnote{http://doc.qt.digia.com/qt/qwidget.html} ta jest typem bazowym dla wszystkich widgetów i udostępnia niezbędne metody dotyczące renderowania oraz obsługi zdarzeń dzięki czemu w łatwy sposób mozemy uzyskać dostęp do całego interfejsu aplikacji.
 
+Interfejs użytkownika w aplikacjach opartych o framework Qt tworzy strukturę hierarchiczną powiązanych ze sobą obiektów klasy QWidget. Wykorzystując ten fakt w łatwy sposób można odtworzyć tą strukturę w innych technologiach, np. tworząc identyczną strukturę w języku HTML. Fakt ten został wykorzystany w niniejszej pracy.
 
 \subsection{System rysowania}
+\label{system_rysowania}
 Rysowanie w bibliotece Qt standardowo zostało zaimplementowane dla rysowania na ekranie oraz urządzeniach drukujących wykorzystując natywne API systemu operacyjnego, dla którego dana wersja Qt została skompilowana. Moduł ten jest niejako opakowaniem dla wywołań systemowych, ujednolicając jego logikę i umożliwiając pełną przenośność aplikacji. Na rysunku \ref{paintsystem-core} przedstawiony został kaskadowy model systemu rysowania w Qt. Jest to \emph{model trójwarstwowy} i każda z klas ma swoje określone zadanie w całym procesie renderowania. Główną zaletą takiego podejścia jest ujednolicenie przepływu procesu rysowania dla różnych urządzeń wyjściowych oraz umożliwienie łatwego sposobu dla dodawania nowych funkcjonalności.
 
 Klasa \emph{QPainter} udostępnia jednolity interfejs umożliwjający wykonywanie operacji rysowania różnych obiektów takich jak linie, okręgi, prostokąty, obrazy oraz umożliwia zastosowanie różnego rodzaju przekształceń, styli czy transformacji macierzowych. 
@@ -85,10 +88,23 @@ Do realizacji tego zadania stworzony został prosty serwer działający w oparci
 Do rozwiązania tego problemu konieczne jest utworzenie ciągłego kanału komunikacyjnego między klientem a procesem aplikacji, za pomocą którego będzie możliwe przesyłanie informacji o wyglądzie interfejsu aplikacji oraz informowanie aplikacji o zdarzeniach generowanych przez użytkownika po stronie przeglądarki. Jako, że za cel przyjęte zostało założenie o nieingerowaniu bezpośrednio w kod skompilowanych już aplikacji, postawiono na technikę umożliwiającą załadowanie kodu biblioteki dynamicznej do przestrzeni pamięciowej procesu aplikacji tuż przed jego uruchomieniem. Kod ten ma za zadanie utrzymanie połączenia oraz transmisję danych między klientem a aplikacją.
 
 \section{Uzyskanie informacji o wyglądzie elementów graficznego interfejsu aplikacji}
-Text ...
+Każdy element graficznego interfejsu aplikacji (QWidget) jest renderowany w momencie odebrania zdarzenia QPaintEvent z kolejki zdarzeń głównego wątku aplikacji. Dzięki temu istnieje łatwy sposób na uzyskanie informacji o tym kiedy oraz ktory element należy przerenderować aby uaktualnić jego wygląd po stronie klienta. Problemem w dalszyb ciągu pozostaje jednak sposób na uzyskanie informacji o samym wyglądzie. 
+
+Proponowane rozwiązanie polega na zaimplementowaniu abstrakcyjnego urządzenia wyjściowego reprezentującego przeglądarkę WWW po stronie klienta (patrz podrozdział \ref{system_rysowania}). Odpowiednio implementując klasy \emph{QPaintEngine} oraz \emph{QPaintDevice} możliwe staje się uzyskanie szczegółowych informacji dotyczących wygądu widget'ów co z kolei umozliwia stworzenie innowacyjnego formatu przesyłanych danych. Zamiast przesyłać bitmapy z wyrenderowanym elementem można wysłać informację o kolorach, punktach, liniach i innych podstawowych elementach, które zostaną narysowane na urządzeniu docelowym jakim po stronie klienta jest przeglądarka WWW z obsługą elementów \emph{canvas}.
 
 \section{Symulacja interakcji użytkownika z interfejsem aplikacji}
-Text ...
+Interakcja użytkownika z aplikacją sprowadza się do obsługi następujących zdarzeń:
+\begin{enumerate}
+  \item Ruch myszy nad elementem
+  \item Wciśnięcie, zwolnienie oraz dwuklik przycisku myszy
+  \item Zmiana położenia kółka myszy
+  \item Wciśnięcie oraz zwolnienie klawiszy na klawiaturze
+  \item Zmiana rozmiaru okna aplikacji poprzez przeciąganie jego krawędzi
+  \item Zamknięcie, minimalizacja lub maksymalizacja okna aplikacji
+\end{enumerate}
+Większość z wyżej wymienionych elementów jest obsługiwana jako zdarzenia w języku JavaScript większości dzisiejszych przeglądarek. Proponowane podejście na rozwiązanie tego zagadnienia polega na stworzeniu formatu danych bazując na notacji JSON (JavaScript Object Notation). Dane w tym formacie przesyłane do serwera są następnie poddawane walidacji i konwersji na obiekty zdarzeń biblioteki Qt. Zdarzenia takie są następnie przesyłane do kolejki zdarzeń w głównym wątku aplikacji. 
+
+Odbiorcą zdarzenia jest widget, który wygenerował dane zdarzenie po stronie przeglądarki bazując na hierarchicznej budowie interfejsu użytkownika. Wyjątkami są tutaj zdarzenia klawiatury, które nie mają bezpośredniego odbiorcy w momencie ich zaistnienia. Aplikacja sama decyduje o tym, który element powinien odebrać zdarzenie. Domyślnie jest to widget, który atualnie posiada tzw. focus, a to z kolei zależy od poprzednich zdarzeń oraz logiki samego programu. W celu symulacji podobnego zachowania decyzja o odbiorcy zdarzeń klawiatury podejmowana jest po stronie serwera bazując na aktualnym stanie aplikacji.
 
 \chapter{Implementacja}
 Text in first chapter ...
@@ -101,19 +117,24 @@ Text ...
 Text ...
 
 \section{Napotkane problemy}
-Text ...
+\begin{enumerate}
+  \item rysowanie za pomocą zdarzeń (konieczność kolejkowania widgetów)
+  \item znikający focus okna aplikacji
+  \item klawiaturoza
+  \item Łukasz Stanisław więcej problemów nie miał... Kolej na problemy Jana Edwarda
+\end{enumerate}
 
 \chapter{Testy aplikacji}
-Text ...
+Natestowaliśmy się, że hoho
 
 \section{Testy w środowisku lokalnym}
-Text ...
+Wszystko spoko.
 
 \section{Testy w sieci Internet}
-Text ...
+Nie było jak stestować.
 
 \chapter{Podsumowanie}
-Text ...
+Wszystko wyszło gitara. Jesteśmy z siebie dumni. Pozdrawiamy mamę, tatę i dudniącego Krzysztofa.
 
 %+Make Index
 \printindex
