thesis - window manager

--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -43,6 +43,7 @@ W rozwiązaniu przedstawionym w pracy po stronie klienta stosujemy dwa nowe komp
 Nowy element drzewa DOM canvas pozwala na renderowanie dynamicznych bitmap na stronie przy pomocy skryptów języka Javascript. Aktualnie wszystkie przeglądarki producentów z WHATWG implementują obecny standard w pełni poprawnie.
  Wprowadzenie tego komponentu pozwala na tworzenie dowolnych animacji oraz grafik, których użycie wcześniej wymagało użycia zewnętrznych pluginów (np. Flash lub Java).
 W projekcie elemntu ten używany jest do rysowania pojedynczych widgetów. 
+
 \subsection{Technologia WebSocket}
 WebSocket jest technologią oferującą ustandaryzowaną pełną dwustronną komunikację między klientem (przeglądarką internetową) a serwerem. Podobną funkcjonalność można było wcześniej zasymulować przy pomocy modelu Comet korzystającego z długotrwałych połączeń HTTP, na które leniwie były wysyłane dane. Poprzednie rozwiązanie z powodu braku ustandaryzowania oraz wykorzystywania obejścia było trudne w utrzymaniu oraz nie oferowało synchronicznej komunikacji dwustronnej.
 W projekcie technologia wykorzystywana jest do komunikacji z serwerem. Łączność ta jest dwustronna.
@@ -114,7 +115,7 @@ Interakcja użytkownika z aplikacją sprowadza się do obsługi następujących 
   \item Zmiana rozmiaru okna aplikacji poprzez przeciąganie jego krawędzi
   \item Zamknięcie, minimalizacja lub maksymalizacja okna aplikacji
 \end{enumerate}
-Większość z wyżej wymienionych elementów jest obsługiwana jako zdarzenia w języku JavaScript większości dzisiejszych przeglądarek. Proponowane podejście na rozwiązanie tego zagadnienia polega na stworzeniu formatu danych bazując na notacji JSON (JavaScript Object Notation). Dane w tym formacie przesyłane do serwera są następnie poddawane walidacji i konwersji na obiekty zdarzeń biblioteki Qt. Zdarzenia takie są następnie przesyłane do kolejki zdarzeń w głównym wątku aplikacji. 
+Większość z wyżej wymienionych elementów jest obsługiwana jako zdarzenia w języku JavaScript większości dzisiejszych przeglądarek. Proponowane podejście na rozwiązanie tego zagadnienia polega na stworzeniu formatu danych bazując na notacji JSON (JavaScript Object Notation). Dane w tym formacie przesyłane do serwera są następnie poddawane walidacji i konwersji na obiekty zdarzeń biblioteki Qt. Zdarzenia takie są następnie przesyłane do kolejki zdarzeń w głównym wątku aplikacji.
 
 Odbiorcą zdarzenia jest widget, który wygenerował dane zdarzenie po stronie przeglądarki bazując na hierarchicznej budowie interfejsu użytkownika. Wyjątkami są tutaj zdarzenia klawiatury, które nie mają bezpośredniego odbiorcy w momencie ich zaistnienia. Aplikacja sama decyduje o tym, który element powinien odebrać zdarzenie. Domyślnie jest to widget, który atualnie posiada tzw. focus, a to z kolei zależy od poprzednich zdarzeń oraz logiki samego programu. W celu symulacji podobnego zachowania decyzja o odbiorcy zdarzeń klawiatury podejmowana jest po stronie serwera bazując na aktualnym stanie aplikacji.
 
@@ -130,16 +131,29 @@ Text in first chapter ...
 
 \subsection{Biblioteki pomocniczne}
 Podczas pracy z projektem zostały wykorzystane popularne biblioteki ułatwiające podstawowe zadania. Wszystkie z nich są darmowe nawet w wykorzystaniu komercyjnym oraz całkowicie otwarte.
-* jQuery
-* jQuery-UI
-* jQuery-mousewheel
-* sylvester.js
+* jQuery - biblioteka ułatwijąca operacje na elementach DOM
+* jQuery-UI - plugin do biblioteki jQuery umożliwiający tworzenie zaawansowanych wizualnych elementów, takich jak okna dialogowe, elementy rozszerzalne (ang. resizable), elementy przesuwalne (ang. draggable).
+* jQuery-mousewheel - plugin do biblioteki jQuery dodający obsługę kółka myszy
+* sylvester.js - biblioteka służąca do zaawansowanych obliczeń na macierzach i wektorach
 
 \subsection{Połączenie}
-Klient po załadowaniu początkowej strony dokonuje połączenia WebSocket z serwerem na port podany na stronie. Następnie nasłuchuje na informacje od serwera i na każdą z nich reaguje. Komunikaty w formacie JSON w drugą stronę wysyłane są po zajściu zdarzeń po stronie klienta, np. ruchu myszą. Dokładny opis zdarzeń znajduję się w sekcji **TODO**
+Klient po załadowaniu początkowej strony dokonuje połączenia WebSocket z serwerem na port podany na stronie. Następnie nasłuchuje na informacje od serwera i na każdą z nich reaguje. Komunikaty w formacie JSON w drugą stronę wysyłane są po zajściu zdarzeń po stronie klienta, np. ruchu myszą. Dokładny opis zdarzeń znajduję się w sekcji **TODO - muszę się bliżej zaprzyjaźnić z latexem ;) **
 
-\subsection{Window manager (ang. zarządca okien)}
+\subsection{Window manager (ang. zarządca okien) na szybkości}
+Typowe programy komputerowe składaja się z wielu okien. Sposób implementacji pseudookien i zarządcy w projekcie był możliwy na dwa sposoby.
+Pierwszym wariantem jest zastosowanie osobnych okien przeglądarki (tzw. popupów), które odpowiadałyby rzeczywistym oknom przeglądarki.
+Drugą opcją jest stworzenie minimalistycznego managera okien w języku Javascript.
 
+Minusem pierwszym rozwiązania jest całkowitym brak możliwości sterowania oknami. Przeglądarka nie jest w stanie zablokować możliwości zamknięcia okna, sterować ich modalnościa oraz przyciskami sterowania (minimalizacji, maksymalizacji, zamknięcia i innymi). Co więcej stosowanie dodatkowych okien przeglądarki jest uważane za złą praktykę.
+Z powodu tak dużej ilości problemów w projekcie zdecydowano się na użycie drugiego wariantu. Do stworzenia okien wykorzystana została biblioteka jQuery-UI dostarczająca metody umożliwiający w przystępny sposób tworzenie elementów rozszerzalnych (ang. resizable) oraz przeciągalnych (ang. draggable). Celem funkcjonalnym było upodobnienie zachowania pseudookien w przeglądarce do prawdziwych okien programu:
+* zmiana rozmiaru okna przy pomocy uchwytów w rogach i na krawędziach
+* przenoszenie okien za pomocą paska tytułowego
+* minimalizacja, maksymalizacja oraz zamykanie okien za pomocą przycisków w prawym górnym rogu
+
+**TODO - tutaj rysunk okienka z zaznaczonymi elementami typu pasek Bar, przyciski _,[],X, chywataki resizable.
+
+
+Okno - po stronie serwera element dziedziczący z klasy QDialog - na stronie jest elementem blokowym div. Wewnątrz niego umiejscowione są inne proste elementy 
 
 \subsection{Rysowanie widgetów przy pomocy elementu canvas}
 
